from typing import List, Dict, Any, Optional
from pydantic import BaseModel
from ..domain.models import FrozenRoutingStep


class HandoffValidationResult(BaseModel):
    allowed: bool
    reason: Optional[str] = None
    suggested_action: str = "CONTINUE"


class HandoffPolicyService:
    """
    Evaluates handoff safety and policy as per doc 20.
    """
    def __init__(self, max_depth: int = 5):
        self.max_depth = max_depth

    def evaluate(
        self, 
        current_step: FrozenRoutingStep, 
        context: Dict[str, Any]
    ) -> HandoffValidationResult:
        """
        Evaluate if a handoff to the next agent is allowed.
        """
        # 1. Depth check
        if current_step.handoff_depth > self.max_depth:
            return HandoffValidationResult(
                allowed=False,
                reason=f"Maximum handoff depth ({self.max_depth}) exceeded",
                suggested_action="BLOCK"
            )

        # 2. Scope check (Simplified)
        # In reality, check if the agent is allowed within the current session scope
        
        return HandoffValidationResult(allowed=True)
