@startuml
title 04. Supervisor Host Agent Domain Model (Python target architecture, 2026-05-01)

skinparam shadowing false
skinparam classAttributeIconSize 0

' --- Core Domain Entities (Pydantic Models) ---

class FrozenRoutingStep {
  +order: int
  +agent_key: str
  +method: str
  +source_type: str
  +reason: str
  +arguments: dict
  +handoff_depth: int
  +parent_agent_key: str
  +pre_hitl_a2ui: str
}

class ExecutionConstraintSet {
  +max_concurrency: int
  +stream_allowed: bool
  +invoke_timeout_ms: int
  +max_handoff_depth: int
  +a2ui_allowed: bool
}

class FrozenExecutionPlan {
  +task_id: str
  +session_id: str
  +request_id: str
  +trace_id: str
  +state_version: int
  +schema_version: int
  +canonicalization_version: int
  +execution_mode: ExecutionMode
  +resume_state: str
  +request_hash: str
  +frozen_plan_hash: str
  +created_at: datetime
  +expires_at: datetime
  +routing_queue: List<FrozenRoutingStep>
  +planner_metadata: dict
  +execution_constraints: ExecutionConstraintSet
  +review_reason: str
}

class ReviewedExecutionSnapshot {
  +task_id: str
  +session_id: str
  +request_id: str
  +trace_id: str
  +state_version: int
  +resume_token: str
  +request_hash: str
  +frozen_plan_hash: str
  +created_at: datetime
  +expires_at: datetime
  +sanitized_input: dict
  +frozen_plan: FrozenExecutionPlan
  +review_reason: str
}

class SnapshotVerificationResult {
  +signature_matched: bool
  +ttl_valid: bool
  +reason_code: ReasonCode
  +route_allowed: bool
  +method_allowed: bool
  +stream_capability_allowed: bool
  +security_policy_allowed: bool
  +endpoint_available: bool
  +is_allowed(): bool
}

class SupervisorTaskEvent {
  +task_id: str
  +event_id: str
  +cursor: str
  +event_type: str
  +created_at: datetime
  +payload: dict
  +is_replayable: bool
}

' --- Interfaces (Ports) ---

interface PlanningService {
  +plan(user_input, context): Tuple[bool, dict]
}

interface A2AInvocationService {
  +invoke(agent_key, method, arguments): dict
  +invoke_stream(agent_key, method, arguments): AsyncGenerator
}

interface HandoffPolicyService {
  +evaluate(step, context): HandoffValidationResult
}

interface ConversationStore {
  +get_messages(session_id, limit): List[dict]
  +save_message(session_id, message): None
}

interface VoiceAdapter {
  +connect(): None
  +send_audio(audio_data): None
  +listen(): AsyncIterator[dict]
  +close(): None
}

class OpenAiRealtimeAdapter {
  -api_key: str
  -model: str
  +connect()
  +send_audio(audio_data)
  +listen()
  +close()
}

class VoiceAdapterFactory {
  {static} +create_adapter(provider): VoiceAdapter
}

' --- Enums ---

enum TaskState {
  CREATED
  WAITING_REVIEW
  RUNNING
  CANCELED
  COMPLETED
  FAILED
}

enum ExecutionMode {
  STREAM
  UNARY
}

enum ReasonCode {
  SUCCESS
  SNAPSHOT_NOT_FOUND
  SNAPSHOT_EXPIRED
  INVALID_HASH
  DUPLICATE_DECISION
  ...
}

' --- Relationships ---

FrozenExecutionPlan "1" *-- "many" FrozenRoutingStep
FrozenExecutionPlan "1" *-- "1" ExecutionConstraintSet
ReviewedExecutionSnapshot "1" *-- "1" FrozenExecutionPlan
PlanningService ..> FrozenExecutionPlan : generates
HandoffPolicyService ..> FrozenRoutingStep : evaluates
VoiceAdapter <|.. OpenAiRealtimeAdapter
VoiceAdapterFactory ..> VoiceAdapter : creates

note bottom of FrozenExecutionPlan
Hash/verification rules:
- request_hash and frozen_plan_hash use deterministic canonical rules
- STREAM approve resumes by task event stream re-subscribe
end note

@enduml
